Постановка целей. Переработаны методы в GoalController и GoalService. Добавлен отдельный  класс для валидации. Полностью переработана фильтрация, сделаны отдельные интерфейсы и классы для фильтрации.